# fast-api-study

./: .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  config.py  conftest.py  main.py  pyproject.toml  repositories.py
issues/: models.py  repositories.py  routers.py
migrations/: env.py
migrations/versions/: 2025-04-13_ad1f3eced5d4_create_user.py  2025-04-19_348b64e87aac_add_new_field_in_user.py  2025-05-04_8069d4d50662_made_name_and_age_fields_optional_in_.py
src/: config.py
src/core/: asgi.py
src/core/api/exceptions/: common.py
src/core/db/: base.py  models.py  sessions.py
src/core/dependencies/: auth.py  db.py
src/core/tests/fixtures/: __init__.py  fastapi.py
src/core/types/: repositories.py
src/modules/auth/: dto.py  routers.py
src/modules/auth/exceptions/: http.py
src/modules/auth/services/: ton.py
src/modules/auth/tests/api/: test_ton_proof.py
src/modules/auth/tests/fixtures/: ton_proof.py
src/modules/issues/: dto.py  repositories.py  routers.py
src/modules/users/: dependencies.py  dto.py  exceptions.py  models.py  repositories.py  routers.py  services.py  utils.py
users/: models.py  repositories.py  routers.py
