[project]
name = ""
version = "0.0.1"
dependencies = [
    "alembic==1.15.2",
    "fastapi==0.115.12",
    "pydantic==2.11.2",
    "pydantic-settings==2.8.1",
    "sqlalchemy==2.0.40",
    "uvicorn==0.34.0",
    "asyncpg==0.30.0",
    "greenlet>=3.1.1",
    "pytoniq>=0.1.40",
    "httpx>=0.28.1",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.11.5",
]

[[tool.mypy.overrides]]
module = "pytoniq"
ignore_missing_imports = true
